
** [[https://github.com/USTC-TNS/TAT/compare/v0.3.3...dev][Unreleased]]

*** Added
+ *tetragono*: Add common used tensors for parity symmetry and some related tensor in Hubbard model with parity
  symmetry.
+ *scalapack.py*: Add documents for scalapack.py.
+ *tetragono*: Simple update will now be done in a single node, this will speed up the program if the mpi job is
  crossing multiple nodes.
*** Changed
+ *tetraku*: Density matrix of Heisenberg/tJ/Hubbard model are renamed to =gibbs_*= from =density_matrix_*=.
*** Deprecated
*** Removed
*** Fixed
+ *tetragono*: Fix bug in min-SR method when the model is complex, A conjugate operator was missing.
+ *tetragono*: Fix bug in mirror direct sampling method for symmetric system. A conjugate to symmetry part of the
  configuration should be applied.
+ *tetragono*: Avoid =nan= in pseudo inverse of min-SR by checking whether the eigenvalue is zero first.
+ *tetraku*: Fix the wrong Hamiltonian for Gibbs state of Fermionic system.
+ *tetraku*: Fix the wrong sign of chemical potential for density matrix of tJ model.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.2...v0.3.3][v0.3.3]] - 2022-03-09

*** Added
+ *tetragono*: Add mirror direct sampling which is only used for Gibbs state on square lattice, and maintains the
  symmetry of the Gibbs state.
+ *TAT.py*: Add =dtype= and =btype= class member for =Tensor= object, which makes it easier to communicate with numpy.
+ *scalapack.py*: Add a python wrapper for scalapack.
*** Changed
+ *tetragono*: Use the =PyScalapack= to speed up min-SR method. User need to specify the path of scalapack dynamic link
  libraries by parameter =scalapack_libraries= for =gm_run= when =natural_gradient_by_direct_pseudo_inverse= enabled.
+ *TAT.py*: Change the module alias name convension, =float= and =complex= without bytes specified would be considered
  as double precision now.
*** Fixed