@@ -8,6 +8,7 @@
 + *scalapack.py*: Add documents for scalapack.py.
 + *tetragono*: Simple update will now be done in a single node, this will speed up the program if the mpi job is
   crossing multiple nodes.
++ *tetraku*: Add tV model.
 *** Changed
 + *tetraku*: Density matrix of Heisenberg/tJ/Hubbard model are renamed to =gibbs_*= from =density_matrix_*=.
 *** Deprecated
